fix layout issue on mobile

--- a/less/heading.less
+++ b/less/heading.less
@@ -7,8 +7,8 @@
 
 .heading {
   background: @gray-base;
-  text-align: center; 
-  padding: 40px 0 30px;
+  text-align: center;
+  padding: 40px 0;
   margin: 0px 0px 0px;
   box-shadow: inset 0px -1px 4px  rgba(0,0,0,0.11);
   h1,h3 { color: #fff; }
