--- a/less/icon.less
+++ b/less/icon.less
@@ -13,10 +13,14 @@
   border-radius: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;  
+  justify-content: center;
   font-size: 2rem;
   border: 1px solid @gray-base;
   margin: 0 auto;
+}
+
+.icon-no-outline{
+  border-color: transparent;
 }
 
 // Alternate styles
