--- a/less/receipt.less
+++ b/less/receipt.less
@@ -7,7 +7,7 @@
 
 .receipt {
   background: #F7F7F7;
-  height:auto;  
+  height:auto;
   width: 100%;
   padding: 20px 20px;
   position: absolute;
@@ -76,7 +76,7 @@
           line-height: 1;
           font-weight: 700;
           padding: 0 0 0 10px;
-          p{ 
+          p{
             margin: 0;
             font-size: 1.1rem;
             color: @gray;
@@ -89,11 +89,12 @@
             font-weight: 500;
             margin: 3px 0 0;
             font-size: 1rem;
+            overflow-x: hidden;
           }
         }
         .receipt-from-amount{
-          p{ 
-            font-size: 1.7rem;
+          p{
+            font-size: 1.6rem;
             text-align: right;
             margin: 0;
           }
@@ -139,7 +140,7 @@
             font-weight: 300;
           }
           .receipt-item-amount{
-            .item-amount{ 
+            .item-amount{
               font-size: 1.6rem;
               font-weight: 300;
             }
@@ -241,4 +242,3 @@
 .receipt-neutral {
   .receipt-variant(@brand-neutral;);
 }
-
