--- a/less/transaction.less
+++ b/less/transaction.less
@@ -14,7 +14,7 @@
     margin: 0;
     div { padding: 0;}
     .icon{
-      font-size: 6rem;
+      font-size: 4rem;
       height: 100%;
       width: auto;
       color: @gray;
